<resources>
    <string name="app_name">Calendly</string>
    <string name="calendar_month">Lịch tháng</string>
    <string name="event">Sự kiện</string>
    <string name="settings">Nguồn lịch</string>
    <string name="calendar_fragment">Calendar Fragment</string>
    <string name="day_view_fragment">Day View Fragment</string>
    <string name="source_manager_fragment">Source Manager Fragment</string>
    <string name="event_name">Tên sự kiện</string>
    <string name="all_day">Cả ngày</string>
    <string name="from">Từ:</string>
    <string name="day">Ngày</string>
    <string name="hour">Giờ</string>
    <string name="to">Tới:</string>
    <string name="description">Mô tả</string>
    <string name="organizer">Người tổ chức</string>
    <string name="location">Địa điểm</string>
    <string name="save_event">Lưu sự kiện</string>
    <string name="another_info">Tùy chọn khác</string>
    <string name="add_new_event">add new event</string>
    <string name="add_event">Thêm sự kiện</string>
    <string name="time">Thời gian</string>
    <string name="event_name_icon">event name icon</string>
    <string name="calendar_source_and_notification">Nguồn lịch và thông báo</string>
    <string name="duration">Thời lượng</string>
    <string name="minute">Phút</string>
    <string name="notification_before_event">Thông báo trước khi sự kiện diễn ra</string>
    <string name="week">Tuần</string>
    <string name="disable_notification">Tắt thông báo</string>
    <string name="arrow_previous_year">arrow previous year</string>
    <string name="arrow_next_year">arrow next year</string>
    <string name="no_event">Không có sự kiện.</string>
    <string name="events_of_day">Sự kiện trong ngày</string>
</resources>